Remove sortable placeholder margin

--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/main.css
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/main.css
@@ -124,8 +124,7 @@
 }
 
 .embedded-content__sortable-placeholder {
-  margin: 5px 0;
-  margin: 0 10px;
+  margin: 0;
   position: relative;
   background-color: #2e8aea;
   height: 2px;
