--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/main.css
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/main.css
@@ -37,8 +37,15 @@
   border-color: #2e8aea;
 }
 
-.embedded-content__item-content {
+.embedded-content__item-content-header {
+  padding: 20px;
+  background: #f8f8f8;
+  border-bottom: 1px solid #d9d9d9;
+}
+
+.embedded-content__item-content-body {
   box-sizing: border-box;
+  background: #fff;
   position: relative;
   display: block;
   padding: 10px;
@@ -67,6 +74,22 @@
 .embedded-content__item-title {
   cursor: pointer;
   padding-left: 5px;
+}
+
+input.embedded-content__item-name {
+  width: 100%;
+  height: 30px;
+  margin-bottom: 0;
+  font-size: 15px;
+  font-weight: bold;
+  line-height: 30px;
+  color: #000;
+  border-color: #ececec;
+  box-sizing: border-box;
+}
+
+input.embedded-content__item-name--empty {
+  border: 1px dashed #d9d9d9;
 }
 
 .embedded-content__has-config {
