--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/main.css
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/main.css
@@ -48,9 +48,22 @@
   background: #fff;
   position: relative;
   display: block;
-  padding: 10px;
   margin: 10px;
   overflow: hidden;
+}
+
+.embedded-content__properties {
+  padding: 10px;
+}
+
+.embedded-content__section-title {
+  padding: 10px;
+  margin-bottom: 5px;
+  background: #f8f8f8;
+  border-bottom: 1px solid #d9d9d9;
+  font-weight: bold;
+  color: #000;
+  box-sizing: border-box;
 }
 
 .embedded-content__control-bar {
