--- a/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/main.css
+++ b/src/DisPlay.Umbraco.EmbeddedContent.Web.UI/main.css
@@ -11,6 +11,13 @@
   color: #000;
 }
 
+.embedded-content__description {
+  padding-top: 5px;
+  font-size: 11px;
+  line-height: 13px;
+  color: #a0a0a0;
+}
+
 .embedded-content__no-data {
   padding-top: 50px;
   font-size: 16px;
