--- a/src/DisPlay.Umbraco.EmbeddedContent/ClientApp/app/main.css
+++ b/src/DisPlay.Umbraco.EmbeddedContent/ClientApp/app/main.css
@@ -156,12 +156,12 @@ input.embedded-content__item-name--empty {
   color: rgba(0, 0, 0, 0.23);
 }
 
-.embedded-content.item-has-settings .embedded-content__tools-tool {
-  min-width: 16px;
-}
-
 .embedded-content__tools-tool:hover {
   color: var(--primaryColor);
+}
+
+.embedded-content.item-has-settings .embedded-content__tools-tool {
+  min-width: 16px;
 }
 
 .embedded-content__placeholder {
@@ -352,10 +352,10 @@ input.embedded-content__item-name--empty {
   display: none !important;
 }
 
-.show-validation.ng-invalid .embedded-content__item.ng-invalid > .embedded-content__control-bar .embedded-content__hasConfig,
-.show-validation.ng-invalid .embedded-content__item.ng-invalid > .embedded-content__control-bar .embedded-content__content-type-name,
 .embedded-content__item--active > .embedded-content__control-bar > .embedded-content__item-title > .embedded-content__has-config,
-.embedded-content__item--active > .embedded-content__control-bar > .embedded-content__item-title > .embedded-content__content-type-name {
+.embedded-content__item--active > .embedded-content__control-bar > .embedded-content__item-title > .embedded-content__content-type-name,
+.show-validation.ng-invalid .embedded-content__item.ng-invalid > .embedded-content__control-bar .embedded-content__hasConfig,
+.show-validation.ng-invalid .embedded-content__item.ng-invalid > .embedded-content__control-bar .embedded-content__content-type-name {
   color: rgba(254, 254, 254, 0.7);
 }
 
