--- a/samples/Website/Views/ArticlePage.cshtml
+++ b/samples/Website/Views/ArticlePage.cshtml
@@ -2,8 +2,8 @@
 
 <h1>@Model.Headline</h1>
 
-@foreach(var ribbon in Model.Ribbons) {
-	<div class="ribbon">
-		@Html.Partial("Ribbons/" + ribbon.DocumentTypeAlias, ribbon)
+@foreach(var block in Model.Blocks) {
+	<div class="block">
+		@Html.Partial("Blocks/" + block.DocumentTypeAlias, block)
 	</div>
 }
