--- a/samples/Website/Views/Partials/Blocks/FaqBlock.cshtml
+++ b/samples/Website/Views/Partials/Blocks/FaqBlock.cshtml
@@ -1,4 +1,4 @@
-@inherits Umbraco.Web.Mvc.UmbracoViewPage<FaqRibbon>
+@inherits Umbraco.Web.Mvc.UmbracoViewPage<FaqBlock>
 
 <div id="accordion-@Model.Title.ToUrlSegment()" role="tablist" aria-multiselectable="true">
   <h2>@Model.Title</h2>
