--- a/samples/Website/Views/Partials/Blocks/JumbotronBlock.cshtml
+++ b/samples/Website/Views/Partials/Blocks/JumbotronBlock.cshtml
@@ -1,4 +1,4 @@
-@inherits Umbraco.Web.Mvc.UmbracoViewPage<JumbotronRibbon>
+@inherits Umbraco.Web.Mvc.UmbracoViewPage<JumbotronBlock>
 <div class="jumbotron">
   <h1 class="display-3">@Model.Headline</h1>
   <p class="lead">@Model.Lead</p>
